<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity$AddEmployeeFragment"
                android:background="#2e2e30">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:id="@+id/editName"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColorHint="#828282"
            android:textColor="#FFFFFFFF"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/surname"
            android:ems="10"
            android:id="@+id/editSurname"
            android:layout_below="@+id/editName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/editName"
            android:layout_alignEnd="@+id/editName"
            android:textColor="#FFFFFFFF"
            android:textColorHint="#828282"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/patronymic"
            android:ems="10"
            android:id="@+id/editPatronymic"
            android:layout_below="@+id/editSurname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/editSurname"
            android:layout_alignEnd="@+id/editSurname"
            android:textIsSelectable="false"
            android:textColor="#FFFFFFFF"
            android:textColorHint="#828282"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editSalary"
            android:layout_below="@+id/editPatronymic"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/editPatronymic"
            android:layout_alignEnd="@+id/editPatronymic"
            android:hint="@string/salary"
            android:textColorHint="#828282"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editSumInBank"
            android:layout_below="@+id/editSalary"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/editSalary"
            android:layout_alignEnd="@+id/editSalary"
            android:hint="@string/bankAccount"
            android:textColorHint="#828282"
            android:textColor="#ffffff"/>
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:layout_below="@+id/editSumInBank"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rButtonMan"
                android:id="@+id/rButtonMan"
                android:textColor="#ffffff"
                android:textSize="18dp"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rButtonWoman"
                android:id="@+id/rButtonWoman"
                android:textColor="#ffffff"
                android:textSize="18dp"/>
    </RadioGroup>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/department"
            android:layout_below="@+id/radioGroup"
            android:layout_toEndOf="@+id/textViewDep"
            android:layout_marginTop="10dp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/typeEmployee"
            android:layout_below="@+id/department"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/department"
            android:layout_marginTop="10dp"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAdd"
            android:id="@+id/buttonAddEmployee"
            android:layout_alignWithParentIfMissing="true"
            android:ems="20"
            android:layout_below="@+id/typeEmployee" android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDepartment"
            android:id="@+id/textViewDep"
            android:layout_below="@+id/radioGroup" android:layout_alignParentStart="true"
            android:layout_above="@+id/typeEmployee" android:textColor="#ffffff" android:textSize="14dp"
            android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type of employee"
            android:id="@+id/textView"
            android:textColor="#ffffff" android:textSize="14dp" android:layout_below="@+id/department"
            android:layout_toStartOf="@+id/department" android:layout_above="@+id/buttonAddEmployee"
            android:layout_marginTop="10dp"/>
</RelativeLayout>
