<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity$DepartmentFragment"
                android:background="#2e2e30">

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonUpdateDep" android:layout_alignParentTop="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" android:src="@drawable/ic_autorenew_white_48dp"
            android:background="#2e2e30" android:contentDescription="@string/imageButtonUpdate"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDepartment"
            android:id="@+id/textViewDepartment" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:enabled="true" android:textColor="#ffffff"
            android:layout_alignParentTop="true"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerDepartment" android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textViewDepartment" android:layout_toLeftOf="@+id/imageButtonUpdateDep"
            android:layout_toStartOf="@+id/imageButtonUpdateDep"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSort"
            android:id="@+id/buttonSortDep" android:layout_below="@+id/imageButtonUpdateDep" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewEmployeeDep" android:layout_below="@+id/buttonSortDep" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
</RelativeLayout>
